# cw13

./: 10.5.c  CMakeLists.txt  art.tex  plot.gpi  test.c
.github/workflows/: Tok.yml
